--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,13 @@ spring:
   jpa:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-    generate-ddl: true
-    show-sql: true
+    generate-ddl: false
+    show-sql: false
   resources:
     add-mappings: true
+  output:
+    ansi:
+      enabled: always
 server:
   address: 0.0.0.0
   port: 8893
