--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 	implementation 'junit:junit:4.12'
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 
+	implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.9.0'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'mysql:mysql-connector-java'
 
